rev: changing api responses format

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8HsY7AyQC8yXK/bPC3Ggu3/x1rlsZfJsv2ujBzXqrT4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=user_management_service
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=user_management
+
+# User Management Service
+DB_USER_SERVICE_CONNECTION=user_management
+DB_USER_SERVICE_HOST=localhost
+DB_USER_SERVICE_PORT=15433
+DB_USER_SERVICE_DATABASE=user_management_service
+DB_USER_SERVICE_USERNAME=postgres
+DB_USER_SERVICE_PASSWORD=postgres
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -37,7 +40,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -63,3 +66,16 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# ============ SERVICES CONFIG ============
+AUTH_SERVICE_URL=http://localhost:8001
+USER_MANAGEMENT_SERVICE_URL=http://localhost:8002
+
+# ============ RABBITMQ CONFIG ============
+RABBITMQ_HOST=172.17.0.2
+RABBITMQ_PORT=5672
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
+
+# ============ DEFAULT ROLE CONFIG ============
+DEFAULT_ROLE=ADMIN
