--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,22 +1,62 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name localhost;
+
     root /app/public;
     index index.php index.html;
 
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+
+    # Disable access to hidden files
+    location ~ /\. {
+        deny all;
+    }
+
+    # Handle Laravel routes
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # PHP-FPM configuration
     location ~ \.php$ {
-        fastcgi_pass app:9000;  # Jika menggunakan php-fpm
-        # fastcgi_pass app:8000;  # Jika menggunakan artisan serve
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass app:9000;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_hide_header X-Powered-By;
+        
+        # Increase timeout for debugging
+        fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
     }
 
-    location ~ /\.ht {
+    # Optimize static files
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Security: Block access to sensitive files
+    location ~* \.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$ {
         deny all;
     }
+
+    # Block access to Laravel specific files
+    location ~ /\.(env|git) {
+        deny all;
+    }
+
+    location ~ /(storage|vendor) {
+        deny all;
+    }
+
+    # Error and access logs
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
