chore: simplify network definition in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,6 @@ volumes:
   app-volumes:
 
 networks:
-  microservices-db-dev:
-    driver: bridge
+  microservices-db-dev:  # Simplified network definition
+    name: microservices_dev_microservices-db-dev
+    external: true
