--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,3 @@
-# if local development use this :
 server {
     listen 80;
     index index.php index.html;
@@ -7,6 +6,7 @@ server {
     access_log /var/log/nginx/lumen.access.log;
     root /var/www/html/public;
     client_max_body_size 100M;
+    
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         add_header 'Access-Control-Allow-Origin' * always;
@@ -15,7 +15,7 @@ server {
     location ~\.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass user-service:9000;  # ✅ Use container name, bukan "php"
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
