--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     hostname: "php"
     volumes:
       - .:/var/www/html 
-      # - ./php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+      - ./php/www.conf:/usr/local/etc/php-fpm.d/www.conf
     working_dir: /var/www/html
     networks:
       - microservices-db-dev
@@ -25,7 +25,7 @@ services:
       - "8450:80"
     volumes:
       - ./src:/var/www/html
-      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
     networks:
