--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -1,39 +1,34 @@
-
 services:
   app:
     build:
       context: .
-      dockerfile: ./php/jenkins.Dockerfile  # Path ke Dockerfile khusus untuk Jenkins
+      dockerfile: ./php/Dockerfile
     image: php:latest
     container_name: user-service
     hostname: "php"
     volumes:
-      - .:/var/www/html
-      # ❌ HAPUS: Config file mounting (sudah di-copy via Dockerfile)
-      # - ./php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+      - ${PWD:-$(pwd)}:/var/www/html  # ✅ Use absolute path
     working_dir: /var/www/html
     networks:
       - microservices-db-dev
-    env_file:
-      - .env
+    environment:
+      - APP_ENV=production
+      - APP_DEBUG=false
 
   nginx_laravel:
-    build:
-      context: ./nginx
-      dockerfile: jenkins.Dockerfile
+    build: ./nginx
+    image: nginx:latest
     container_name: nginx_laravel
     hostname: "nginx"
     ports:
-      - "80:80"
+      - "8440:80"
     volumes:
-      - .:/var/www/html
-      # ❌ HAPUS: Config file mounting (sudah di-copy via Dockerfile)
-      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ${PWD:-$(pwd)}:/var/www/html  # ✅ Use absolute path
     depends_on:
       - app
     networks:
       - microservices-db-dev
-
 networks:
-  microservices-db-dev:
-    driver: bridge
+  microservices-db-dev:  # Simplified network definition
+    name: microservices_dev_microservices-db-dev
+    external: true
