chore: update Dockerfile and docker-compose for improved structure and consistency

--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -6,8 +6,8 @@ services:
     image: php:latest
     container_name: user-service
     hostname: "php"
-    volumes:
-      - ${PWD:-$(pwd)}:/var/www/html  # ✅ Use absolute path
+    # volumes:
+    #   - ${PWD:-$(pwd)}:/var/www/html  # ✅ Use absolute path
     working_dir: /var/www/html
     networks:
       - microservices-db-dev
@@ -17,15 +17,15 @@ services:
 
   nginx_laravel:
     build:
-      context: ./nginx
-      dockerfile: jenkins.Dockerfile
+      context: .  # ← Root directory (consistent)
+      dockerfile: ./nginx/jenkins.Dockerfile
     image: nginx:latest
     container_name: nginx_laravel
     hostname: "nginx"
     ports:
       - "8440:80"
-    volumes:
-      - ${PWD:-$(pwd)}:/var/www/html  # ✅ Use absolute path
+    # volumes:
+    #   - ${PWD:-$(pwd)}:/var/www/html  # ✅ Use absolute path
     depends_on:
       - app
     networks:
