chore: update environment variables in Docker Compose for development setup

--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -15,8 +15,8 @@ services:
       - nginx-user-service-network
       - microservices-db-dev
     environment:
-      - APP_ENV=production
-      - APP_DEBUG=false
+      - APP_ENV=development
+      - APP_DEBUG=true
 
   nginx_laravel:
     build:
