--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -14,6 +14,8 @@ services:
     networks:
       - nginx-user-service-network
       - microservices-db-dev
+    env_file:
+      - .env
     environment:
       - APP_ENV=development
       - APP_DEBUG=true
