--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -13,6 +13,7 @@ services:
     working_dir: /var/www/html
     networks:
       - nginx-user-service-network
+      - rabbitmq-network
       - microservices-db-dev
     env_file:
       - .env
@@ -35,6 +36,7 @@ services:
       - app
     networks:
       - nginx-user-service-network
+      - rabbitmq-network
       - microservices-db-dev
 
 
@@ -43,4 +45,7 @@ networks:
     driver: bridge
   microservices-db-dev:  # Simplified network definition
     name: microservices_dev_microservices-db-dev
+    external: true
+  rabbitmq-network:
+    name: rabbitmq_rabbitmq-network
     external: true
